--- a/angular.json
+++ b/angular.json
@@ -25,9 +25,7 @@
             "aot": true,
             "assets": [
               "src/favicon.ico",
-              "src/assets",
-              "src/api",
-              "src/privacy"
+              "src/assets"
             ],
             "styles": [
               "src/styles.scss"
