--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
-#,
 #    "postinstall": "ng build --output-path dist"
+
+.env
 
 # compiled output
 # /dist
