--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
     "angular-ymaps": "^0.1.1",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "geometrix_bot": "^1.0.4",
     "nodemailer": "^6.4.17",
